Fixed title graphic border on IE and Firefox.

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,3 @@
-// Colour scheme:
-// - #ac66df
-// - #6f0aaa
-// - #9d3ed5
-// - #5e2580
-// - #47036f
-
 body {
     background: #ffffff;
 }
@@ -17,6 +10,10 @@ a, a:visited {
 a:hover, a:active {
     color: #6f0aaa;
     text-decoration: none;
+}
+
+a img {
+    border: none;
 }
 
 #content a h2, #content a:visited h2 {
